--- a/SuperShop.Mobile/SuperShop.Mobile/App.xaml
+++ b/SuperShop.Mobile/SuperShop.Mobile/App.xaml
@@ -6,6 +6,10 @@
   <Application.Resources>
 
     <!-- Application resource dictionary -->
+        <ResourceDictionary>
+            <!-- Parameters -->
+            <x:String x:Key="UrlAPI">https://supershop25853.azurewebsites.net/</x:String>
+        </ResourceDictionary>
 
   </Application.Resources>
 </prism:PrismApplication>
