--- a/SuperShop.Mobile/SuperShop.Mobile/Views/ProductsPage.xaml
+++ b/SuperShop.Mobile/SuperShop.Mobile/Views/ProductsPage.xaml
@@ -23,6 +23,9 @@
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Grid>
+                            <Grid.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding SelectProductCommand}" />
+                            </Grid.GestureRecognizers>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="*" />
@@ -31,7 +34,7 @@
                             <ffimageloading:CachedImage
                                 Grid.Column="0"
                                 Margin="5"
-                                Aspect="AspectFill"
+                                Aspect="AspectFit"
                                 CacheDuration="50"
                                 RetryCount="3"
                                 RetryDelay="600"
