--- a/SuperShop.Mobile/SuperShop.Mobile/Views/ProductsPage.xaml
+++ b/SuperShop.Mobile/SuperShop.Mobile/Views/ProductsPage.xaml
@@ -7,7 +7,9 @@
               xmlns:i18n="clr-namespace:SuperShop.Mobile.Helpers"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="SuperShop.Mobile.Views.ProductsPage"
-             Title="{Binding Title}">
+             Title="{Binding Title}"
+             BackgroundColor="{StaticResource ColorBackground}">
+    
     <AbsoluteLayout>
         <StackLayout
             Padding="5"
@@ -71,10 +73,10 @@
             AbsoluteLayout.LayoutBounds=".5,.5,.5,.5"
             AbsoluteLayout.LayoutFlags="All"
             AnimationType="Gear"
-            BackgroundColor="Silver"
+            BackgroundColor="{StaticResource ColorAccent}"
             HorizontalOptions="Center"
             IsBusy="{Binding IsRunning}"
-            TextColor="White"
+            TextColor="{StaticResource ColorFontInverse}"
             VerticalOptions="Center"
             ViewBoxHeight="80"
             ViewBoxWidth="80" />
